2004-10-30  Sergey V. Udaltsov <svu@gnome.org>

	* configure.in:
	* gkb-new/descs/Makefile.am:
	* gkb-new/descs/LV_Apostrophe.keyprop.desktop.in:
	* gkb-new/descs/LV_Standard.keyprop.desktop.in:
	* gkb-new/descs/LV_Tilda.keyprop.desktop.in:
	* gkb-new/gkb/Makefile.am:
	* gkb-new/gkb/lv.png: Adding Latvian layout. Fixing #128740

2004-10-30  Davyd Madeley  <davyd@madeley.id.au>

	* configure.in:
	* Makefile.am: Make charpick applet require gucharmap (>=1.4.0) this
	  allows us to get the description of unicode characters. If gucharmap
	  is not available then charpick won't be built.

2004-10-27  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* mixer/applet.c: (flip_byte), (flip_pixel), (flip),
	(gnome_volume_applet_class_init):
	  Fix icon for RTL environments.

2004-10-26  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* mixer/applet.c: (gnome_volume_applet_get_dock_position),
	(gnome_volume_applet_popup_dock):
	  Refactoring.
	(gnome_volume_applet_button):
	  Hide on move (fixes #152855).

2004-10-26  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* mixer/applet.c: (gnome_volume_applet_setup),
	(gnome_volume_applet_popup_dock),
	(gnome_volume_applet_popdown_dock):
	  Behave like a menu (fixes #98355).
	(gnome_volume_applet_toggle_mute),
	(gnome_volume_applet_orientation), (cb_verb), (cb_ui_event):
	  Fix mute behaviour via the menu (fixes #153553).

2004-10-26  Davyd Madeley  <davyd@madeley.id.au>

	* Makefile.am:
	* configure.in: Remove mailcheck, add new null_applet to deprecate
	  mailcheck
	
	A null_applet/*: null_applet: The Applet Deprecation Applet

	R mailcheck/*: The Inbox Monitor, may it Rest In Peace

2004-10-25  Davyd Madeley  <davyd@madeley.id.au>

	* gtik/gnome-money.png
	* gtik/Makefile.am:
	* mailcheck/Makefile.am:
	* mailcheck/gnome-mailcheck.png:
	* modemlights/Makefile.am:
	* modemlights/gnome-modem.png: Move three icons from gnome-desktop
	
	* charpick/charpick.c:
	* gtik/gtik.c:
	* mailcheck/mailcheck.c: