@@ -1,0 +1,13 @@
+[Keymap Entry]
+Countries=1
+_Name=Catalan xkb keymap
+Codepage=iso-8859-15
+Type=105
+Arch=ix86
+Command=setxkbmap es
+
+[Country 0]
+Flag=ct.png
+Label=ct
+_Country=Catalonia
+_Language=Catalan
