@@ -44,6 +44,7 @@ gkb-new/descs/BY_Belarussian.keyprop.desktop.in
 gkb-new/descs/Basque.keyprop.desktop.in
 gkb-new/descs/Belgian.keyprop.desktop.in
 gkb-new/descs/BulgarianCyril.keyprop.desktop.in
+gkb-new/descs/Catalan.keyprop.desktop.in
 gkb-new/descs/CA_English.keyprop.desktop.in
 gkb-new/descs/CH_German_x.keyprop.desktop.in
 gkb-new/descs/CZ_Czech.keyprop.desktop.in
