@@ -1,6 +1,12 @@
+2004-10-31  Sergey V. Udaltsov <svu@gnome.org>
+
+	* gkb-new/descs/Makefile.am:
+	* gkb-new/descs/Catalan.keyprop.desktop.in:
+	* gkb-new/gkb/Makefile.am:
+	* gkb-new/gkb/ct.png: Adding Catalan layout. Fixing #99460
+
 2004-10-30  Sergey V. Udaltsov <svu@gnome.org>
 
-	* configure.in:
 	* gkb-new/descs/Makefile.am:
 	* gkb-new/descs/LV_Apostrophe.keyprop.desktop.in:
 	* gkb-new/descs/LV_Standard.keyprop.desktop.in:
